# openotter

./: .gitattributes  .gitignore  Gemini.md  README.md
.agent/workflows/: build-stm32.md
.ai-context/: achievements.md  chat.md  coordinate-systems.md  lidar-depth-design.md  plan.md  task.md  walkthrough.md
assets/: README.md
assets/design/: metalbot-architecture.drawio  openotter-architecture.drawio
docs/superpowers/plans/: 2026-03-31-arkit-velocity-ttc-constant-speed-planner.md  2026-04-05-agent-runtime-telegram.md  2026-04-23-stm32-reverse-safety-and-protocol.md  2026-04-24-vl53l5cx-reverse-safety.md  2026-04-24-vl53l5cx-tof-debug.md
docs/superpowers/specs/: 2026-04-05-agent-runtime-telegram-design.md  2026-04-19-vl53l1cb-multizone-tof-design.md  2026-04-23-stm32-reverse-safety-and-protocol-design.md  2026-04-24-vl53l5cx-reverse-safety-design.md  2026-04-24-vl53l5cx-tof-debug-design.md  2026-04-26-vl53l5cx-hot-reset-recovery.md
firmware/learning-motor-ctrl/: README.md
firmware/learning-motor-ctrl/.ai-context/: brushless_motor_spec.md  env.md  implementation_plan.md  task.md  walkthrough.md
firmware/learning-motor-ctrl/scripts/: monitor.sh  run_combined.sh  run_motor.sh  run_servo.sh  stop_combined.sh  stop_motor.sh  stop_servo.sh
firmware/learning-motor-ctrl/sketches/combined_demo/: combined_demo.ino
firmware/learning-motor-ctrl/sketches/combined_stop/: combined_stop.ino
firmware/learning-motor-ctrl/sketches/motor_demo/: motor_demo.ino
firmware/learning-motor-ctrl/tools/: arduino-cli.yaml  common.sh  setup_env.sh
firmware/metalbot-arduino/: README.md
firmware/openotter-arduino/: README.md  deploy.sh  openotter-arduino.ino
firmware/openotter-arduino/tools/: arduino-cli.yaml  setup_env_pi.sh
firmware/raspberry-pi-mcp/: CHANGELOG.md  README.md
firmware/raspberry-pi-mcp/src/: dashboard.cpp  mcp_status.h
firmware/stm32-mcp/: .gitignore  CHANGELOG.md  README.md  STM32L475XX_FLASH.ld
firmware/stm32-mcp/BLE/: .!36104!config_template.h  README.md  ble_hci_tl_io_template.c  config_template.h
firmware/stm32-mcp/Drivers/: README.md
firmware/stm32-mcp/cmake/stm32cubemx/: CMakeLists.txt
firmware/stm32-mcp/scripts/: fetch-deps.sh
metalbot-ios/: CHANGELOG.md  README.md  build.sh  project.yml
metalbot-ios/Resources/: Info.plist
metalbot-ios/Sources/Agent/: GatewayBridge.swift  KeychainHelper.swift  ResponseBuilder.swift  SpeechOutput.swift  TelegramGateway.swift
metalbot-ios/Sources/App/: MetalbotApp.swift
metalbot-ios/Sources/Capture/: ARKitPoseViewModel.swift  CaptureViewModel.swift  DepthPointProjector.swift  LiDARCaptureSession.swift  PointCloud.swift  STM32BleManager.swift  STM32ControlViewModel.swift  SelfDrivingViewModel.swift
metalbot-ios/Sources/Planner/: DESIGN.md  PlannerContext.swift  PlannerOrchestrator.swift  PlannerProtocol.swift
metalbot-ios/Sources/Renderer/: PointCloudRenderer.swift  Shaders.metal
metalbot-ios/Sources/Util/: ARKitVelocityEstimator.swift  DeviceCapability.swift  RobotGeometry.swift
metalbot-ios/Sources/Views/: ARKitPoseView.swift  AgentDebugView.swift  DepthCaptureView.swift  DiagnosticsHUD.swift  HomeView.swift  MCPTestView.swift  MapManagerView.swift  PoseMapView.swift  STM32ControlView.swift  SelfDrivingView.swift
metalbot-ios/Tests/Agent/: ActionDispatcherTests.swift  AgentRuntimeTests.swift  KeychainHelperTests.swift  ResponseBuilderTests.swift  TelegramGatewayTests.swift
metalbot-ios/Tests/Capture/: DepthPointProjectorTests.swift
metalbot-ios/Tests/Planner/: ConstantSpeedPlannerTests.swift  PlannerOrchestratorTests.swift  PlannerTestFactory.swift  SafetySupervisorTests.swift
metalbot-mcp/: README.md
metalbot-mcp/src/: main.cpp
openotter-ios/: CHANGELOG.md  README.md  build.sh  project.yml
openotter-ios/Resources/: Info.plist  motor_wheel_calibration.csv
openotter-ios/Sources/Agent/: ActionDispatcher.swift  AgentAction.swift  AgentRuntime.swift  CommandInterpreter.swift  KeychainHelper.swift  KeywordInterpreter.swift  MemoryStore.swift  ResponseBuilder.swift  SkillRegistry.swift  TelegramGateway.swift
openotter-ios/Sources/App/: OpenOtterApp.swift
openotter-ios/Sources/Capture/: ARKitPoseViewModel.swift  BleConnectionStatus.swift  CaptureViewModel.swift  ESCBleManager.swift  ESCTelemetryPacket.swift  FirmwareSafetyEvent.swift  FirmwareSafetyEventGate.swift  LiDARCaptureSession.swift  MCPConnection.swift  MCPProtocol.swift  RaspberryPiControlViewModel.swift  RearSafetyPresentation.swift  STM32BleManager.swift  STM32ControlViewModel.swift  STM32TofService.swift  SelfDrivingViewModel.swift  TofTypes.swift
openotter-ios/Sources/Planner/: ControlCommand.swift  DESIGN.md  OperatingMode.swift  PlannerContext.swift  PlannerOrchestrator.swift  PlannerProtocol.swift
openotter-ios/Sources/Renderer/: PointCloudMTKView.swift
openotter-ios/Sources/Util/: AngleMath.swift  Crc16Xmodem.swift  MotorSpeedConverter.swift  PwmMapping.swift
openotter-ios/Sources/Views/: ARKitPoseView.swift  AgentDebugView.swift  CommonViews.swift  DepthCaptureView.swift  HomeView.swift  PoseMapView.swift  RaspberryPiControlView.swift  STM32ControlView.swift  SelfDrivingEmergencyAlert.swift  SelfDrivingView.swift  TofGridView.swift
openotter-ios/Tests/Agent/: ActionDispatcherTests.swift  AgentRuntimeTests.swift  KeychainHelperTests.swift  KeywordInterpreterTests.swift  ResponseBuilderTests.swift  TelegramGatewayTests.swift
openotter-ios/Tests/Capture/: Crc16XmodemTests.swift  DepthPointProjectorTests.swift  ESCTelemetryPacketTests.swift  FirmwareSafetyEventGateTests.swift  FirmwareSafetyEventTests.swift  MCPProtocolTests.swift  PwmMappingTests.swift  RearSafetyPresentationTests.swift  STM32BleModeTransitionTests.swift  STM32TofServiceTests.swift
openotter-ios/Tests/Planner/: ConstantSpeedPlannerTests.swift  FirmwareSafetyEventTests.swift  PlannerOrchestratorTests.swift  PlannerTestFactory.swift  SafetySupervisorTests.swift
openotter-ios/Tests/Views/: SelfDrivingEmergencyAlertTests.swift
prototypes/decel_fit/: README.md  fit_decel.py
prototypes/esc_telemetry/: project.yml
(+228 files in other folders)
